--- a/apps/apidoc-template-v5/src/i18n/locales/en.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/en.json
@@ -123,5 +123,16 @@
     "403": "Forbidden",
     "404": "Not Found",
     "500": "Server Error"
+  },
+  "login": {
+    "title": "Sign In",
+    "subtitle": "Access protected documentation",
+    "email": "Email address",
+    "password": "Password",
+    "submit": "Sign in",
+    "loading": "Signing in...",
+    "error": "Login error",
+    "invalidCredentials": "Invalid credentials",
+    "networkError": "Network error. Please try again."
   }
 }
