--- a/apps/apidoc-template-v5/src/i18n/locales/en.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/en.json
@@ -66,6 +66,7 @@
     "description": "Description",
     "parameters": "Parameters",
     "headers": "Headers",
+    "headerExamples": "Header Examples",
     "body": "Body",
     "response": "Response",
     "responses": "Responses",
