--- a/apps/apidoc-template-v5/src/i18n/locales/es.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/es.json
@@ -66,6 +66,7 @@
     "description": "Descripción",
     "parameters": "Parámetros",
     "headers": "Headers",
+    "headerExamples": "Ejemplos de Headers",
     "body": "Body",
     "response": "Respuesta",
     "responses": "Respuestas",
