--- a/apps/apidoc-template-v5/src/i18n/locales/en.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/en.json
@@ -74,25 +74,33 @@
     "versions": "Versions",
     "description": "Description",
     "parameters": "Parameters",
+    "parameterName": "Parameter name",
     "headers": "Headers",
     "headerExamples": "Header Examples",
     "body": "Body",
+    "params": "Params",
     "response": "Response",
     "responses": "Responses",
     "success": "Success",
     "error": "Error",
     "examples": "Examples",
     "tryIt": "Try it",
+    "send": "Send",
+    "sending": "Sending...",
+    "addParameter": "Add parameter",
     "group": "Group",
     "groups": "Groups",
     "multipleVersions": "{count} versions",
     "latestVersion": "Latest version",
     "selectVersion": "Select version",
     "compareVersions": "Compare versions",
+    "compareWith": "compare changes with:",
     "latest": "Latest",
     "endpointsDocumentation": "Endpoints documentation for {section}",
     "availableEndpoints": "Available Endpoints",
-    "sectionApi": "{section} API"
+    "sectionApi": "{section} API",
+    "removedInVersion": "Removed in this version",
+    "request": "Request"
   },
   "search": {
     "placeholder": "Search documentation...",
@@ -108,7 +116,13 @@
     "header": "Header",
     "footer": "Footer",
     "group": "Group",
-    "tsdoc": "TypeScript Doc"
+    "tsdoc": "TypeScript Doc",
+    "parameters": "Parameters",
+    "properties": "Properties",
+    "returns": "Returns",
+    "documentation": "Documentation",
+    "example": "Example",
+    "noSymbolsFound": "No symbols found for"
   },
   "common": {
     "loading": "Loading...",
