--- a/apps/apidoc-template-v5/src/i18n/locales/es.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/es.json
@@ -74,25 +74,33 @@
     "versions": "Versiones",
     "description": "Descripción",
     "parameters": "Parámetros",
+    "parameterName": "Nombre del parámetro",
     "headers": "Headers",
     "headerExamples": "Ejemplos de Headers",
     "body": "Body",
+    "params": "Params",
     "response": "Respuesta",
     "responses": "Respuestas",
     "success": "Éxito",
     "error": "Error",
     "examples": "Ejemplos",
     "tryIt": "Probar",
+    "send": "Enviar",
+    "sending": "Enviando...",
+    "addParameter": "Agregar parámetro",
     "group": "Grupo",
     "groups": "Grupos",
     "multipleVersions": "{count} versiones",
     "latestVersion": "Última versión",
     "selectVersion": "Seleccionar versión",
     "compareVersions": "Comparar versiones",
+    "compareWith": "comparar cambios con:",
     "latest": "Última",
     "endpointsDocumentation": "Documentación de endpoints para {section}",
     "availableEndpoints": "Endpoints Disponibles",
-    "sectionApi": "{section} API"
+    "sectionApi": "{section} API",
+    "removedInVersion": "Eliminado en esta versión",
+    "request": "Request"
   },
   "search": {
     "placeholder": "Buscar en la documentación...",
@@ -108,7 +116,13 @@
     "header": "Encabezado",
     "footer": "Pie de página",
     "group": "Grupo",
-    "tsdoc": "TypeScript Doc"
+    "tsdoc": "TypeScript Doc",
+    "parameters": "Parámetros",
+    "properties": "Propiedades",
+    "returns": "Retorna",
+    "documentation": "Documentación",
+    "example": "Ejemplo",
+    "noSymbolsFound": "No se encontraron símbolos para"
   },
   "common": {
     "loading": "Cargando...",
