--- a/apps/apidoc-template-v5/src/i18n/locales/de.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/de.json
@@ -100,7 +100,10 @@
     "addParameter": "Parameter hinzufügen",
     "compareWith": "Änderungen vergleichen mit:",
     "removedInVersion": "In dieser Version entfernt",
-    "request": "Anfrage"
+    "request": "Anfrage",
+    "header": "Header",
+    "addHeader": "Header hinzufügen",
+    "format": "Format"
   },
   "search": {
     "placeholder": "Dokumentation durchsuchen...",
