--- a/apps/apidoc-template-v5/src/i18n/locales/es.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/es.json
@@ -100,7 +100,10 @@
     "availableEndpoints": "Endpoints Disponibles",
     "sectionApi": "{section} API",
     "removedInVersion": "Eliminado en esta versión",
-    "request": "Request"
+    "request": "Request",
+    "header": "Encabezado",
+    "addHeader": "Agregar encabezado",
+    "format": "Formato"
   },
   "search": {
     "placeholder": "Buscar en la documentación...",
