--- a/apps/apidoc-template-v5/src/i18n/locales/pt-BR.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/pt-BR.json
@@ -100,7 +100,10 @@
     "addParameter": "Adicionar parâmetro",
     "compareWith": "comparar mudanças com:",
     "removedInVersion": "Removido nesta versão",
-    "request": "Requisição"
+    "request": "Requisição",
+    "header": "Cabeçalho",
+    "addHeader": "Adicionar cabeçalho",
+    "format": "Formato"
   },
   "search": {
     "placeholder": "Buscar documentação...",
