feat: add game catalog functionality with CRUD operations
- Introduced Game interface to define the structure of game entities.
- Implemented getAllGames function to retrieve all games from the catalog.
- Added addGame function to create new game entries with validation.
- Created searchGames function for querying games with optional filters.
- Developed updateGameStock function to modify the stock status of games.
- Included comprehensive TSDoc comments for all functions and the Game interface.

--- a/apps/apidoc-template-v5/src/i18n/locales/en.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/en.json
@@ -127,6 +127,20 @@
     "example": "Example",
     "noSymbolsFound": "No symbols found for"
   },
+  "tsdoc": {
+    "title": "TypeScript",
+    "all": "all",
+    "interface": "interface",
+    "interfaces": "interfaces",
+    "function": "function",
+    "functions": "functions",
+    "class": "class",
+    "classes": "classes",
+    "type": "type",
+    "types": "types",
+    "enum": "enum",
+    "enums": "enums"
+  },
   "common": {
     "loading": "Loading...",
     "error": "Error",
