Add tests for VersionSelector with single version and multiple languages
- Implement tests to verify the visibility and functionality of the VersionSelector component when a single version is available with multiple languages.
- Ensure that the correct number of language buttons and flags are displayed.
- Add tests for language switching functionality.
- Include tests for endpoints with no version but multiple languages, confirming the presence of the VersionSelector and language options.

--- a/apps/apidoc-template-v5/src/i18n/locales/es.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/es.json
@@ -72,6 +72,7 @@
     "url": "URL",
     "version": "Versión",
     "versions": "Versiones",
+    "availableLanguages": "Idiomas Disponibles",
     "description": "Descripción",
     "parameters": "Parámetros",
     "parameterName": "Nombre del parámetro",
