--- a/apps/apidoc-template-v5/src/i18n/locales/de.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/de.json
@@ -72,6 +72,7 @@
     "url": "URL",
     "version": "Version",
     "versions": "Versionen",
+    "availableLanguages": "Verfügbare Sprachen",
     "description": "Beschreibung",
     "parameters": "Parameter",
     "headers": "Header",
