--- a/apps/apidoc-template-v5/src/i18n/locales/en.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/en.json
@@ -72,6 +72,7 @@
     "url": "URL",
     "version": "Version",
     "versions": "Versions",
+    "availableLanguages": "Available Languages",
     "description": "Description",
     "parameters": "Parameters",
     "parameterName": "Parameter name",
