--- a/apps/apidoc-template-v5/src/i18n/locales/fr.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/fr.json
@@ -72,6 +72,7 @@
     "url": "URL",
     "version": "Version",
     "versions": "Versions",
+    "availableLanguages": "Langues Disponibles",
     "description": "Description",
     "parameters": "Paramètres",
     "headers": "En-têtes",
