--- a/apps/apidoc-template-v5/src/i18n/locales/pt-BR.json
+++ b/apps/apidoc-template-v5/src/i18n/locales/pt-BR.json
@@ -72,6 +72,7 @@
     "url": "URL",
     "version": "Versão",
     "versions": "Versões",
+    "availableLanguages": "Idiomas Disponíveis",
     "description": "Descrição",
     "parameters": "Parâmetros",
     "headers": "Cabeçalhos",
